--- a/src/content/docs/htb/paper.mdx
+++ b/src/content/docs/htb/paper.mdx
@@ -1,7 +1,7 @@
 ---
 layout: /src/layouts/PostLayout.astro
 title: Paper
-tags: []
+tags: ["LFI", "polkit"]
 ---
 **Start 20:30 22-04-2025**
 
@@ -9,9 +9,9 @@ tags: []
 ```
 10.10.11.143
 ```
-# Recon
+## Recon
 
-## Nmap
+### Nmap
 
 ```bash
 ┌──(kali㉿kali)-[~]
@@ -36,7 +36,7 @@ commonName=localhost.localdomain/organizationName=Unspecified/countryName=US/ema
 ```
 
 
-## 80/TCP - HTTP
+### 80/TCP - HTTP
 
 ![](../../../assets/dcb71800b6041537de7d77575076afec.png)
 
@@ -77,7 +77,7 @@ I went ahead and registered a new account via the found URL:
 ![](../../../assets/d2e1465154a41488f4d4096d93d13c79.png)
 
 
-## LFI
+### LFI
 
 This was all fun and games but I had no access to the admin panel, so I decided to check what I could get from the bot:
 
@@ -122,7 +122,7 @@ When I try to log in I get the above message, but I am still able to log in:
 ![](../../../assets/2ee2ecad24d72681e05c02939d19d811.png)
 
 
-# Foothold
+## Foothold
 
 Let's see if *dwight* uses the same password for SSH:
 
@@ -130,7 +130,7 @@ Let's see if *dwight* uses the same password for SSH:
 
 EZ PZ access.
 
-## user.txt
+### user.txt
 
 ![](../../../assets/bd6f36934052c0d02dd53a04505503b7.png)
 
@@ -139,7 +139,7 @@ Other than that I have no `sudo` privs:
 ![](../../../assets/a623427f9c05f4bd3006b29bdd79b6ae.png)
 
 
-# Privilege Escalation
+## Privilege Escalation
 
 I decide to download over `linpeas.sh` and run it.
 
@@ -161,7 +161,7 @@ I found a script that should automatically do this:
 
 Hell yeah.
 
-## root.txt
+### root.txt
 
 ![](../../../assets/084177e5792807ccfc2249ca0dd52b77.png)
 
@@ -172,5 +172,3 @@ Hell yeah.
 **Finished 22:07 22-04-2025**
 
 [^Links]: [[Hack The Box]] [[OSCP Prep]]
-
-#LFI #polkit 
